[package]
name = "poptart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
iroh-bitswap = "0.1.3"
iroh-car = "0.1.3"
libp2p = { version = "0.50", features = ["yamux", "noise", "tcp", "tokio", "quic", "dns", "websocket", "macros", "relay", "dcutr", "identify"], default-features = false }
tokio = { version = "1", features = ["macros", "net", "rt", "fs"] }
cid = "0.9"
async-trait = "0.1.57"
ahash = "0.8.0"
bytes = "1.1.0"
log = "0.4.17"
colog = "1.1.0"
rocksdb = "0.19.0"
smallvec = { version = "1.10.0", features = ["write"] }
rkyv = { version = "0.7.37", features = ["validation"] }
bytecheck = "0.6.7"
libipld = "0.15.0"
dirs-next = "2.0.0"
tempfile = "3.3.0"
tork = { version = "0.1", path = "./tork" }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
influxdb = { version = "0.5.2", default-features = false, features = ["derive", "use-serde", "curl-client"] }
chrono = "0.4.23"

[workspace]
members = [
  "tork",
]

